# switch2controllerpc

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  switch2pc.spec
.github/workflows/: ci.yml  release.yml
scripts/: build.ps1
src/switch2pc/: __main__.py  app.py  config.py  controller.py  discoverer.py  gui.py  preview.py  utils.py  vigem_commons.py  virtual_controller.py
src/switch2pc/bootstrap/: __init__.py  vigem.py
src/switch2pc/resources/: config.yaml
tests/: test_bootstrap.py  test_utils.py
wheels/: vgamepad-0.1.0-py3-none-any.whl
