[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "switch2controllerpc"
version = "0.1.0"
description = "Use Nintendo Switch 2 Joy-cons and Pro Controller as PC gamepads with gyro mouse support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Scott Carey" }]
keywords = ["nintendo", "switch", "joycon", "controller", "gamepad", "bluetooth", "gyro", "vigembus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "bleak==1.0.1",
    "pywin32>=311",
    "PyYAML>=6.0.2",
    "vgamepad>=0.1.0",
    "winrt-runtime>=3.2.1",
    "winrt-Windows.Devices.Bluetooth>=3.2.1",
    "winrt-Windows.Devices.Bluetooth.Advertisement>=3.2.1",
    "winrt-Windows.Devices.Bluetooth.GenericAttributeProfile>=3.2.1",
    "winrt-Windows.Devices.Enumeration>=3.2.1",
    "winrt-Windows.Foundation>=3.2.1",
    "winrt-Windows.Foundation.Collections>=3.2.1",
    "winrt-Windows.Storage.Streams>=3.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
    "ruff>=0.5",
]

[project.scripts]
switch2pc = "switch2pc.app:main"

[project.urls]
Homepage = "https://github.com/CareyScott/switch2controllerpc"
Issues = "https://github.com/CareyScott/switch2controllerpc/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"switch2pc" = ["resources/*.yaml", "resources/images/*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = [
    "E501",  # line too long; legacy upstream code has long lines we don't want to mass-edit
    "E701",  # `if cond: stmt` is used pervasively in upstream gui.py — preserving style
    "E702",  # `stmt; stmt` likewise (mostly in inline tkinter setup)
    "B008",  # `VibrationData()` in default args is intentional in upstream controller.py
]

[tool.pytest.ini_options]
testpaths = ["tests"]
